# escrow

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/: admin.py  auth.py  contracts.py  disputes.py  milestones.py  payments.py  rooms.py  wallets.py  webhooks.py
app/core/: bootstrap.py  config.py  db.py  security.py
app/domain/: common.py
app/domain/collaboration/: __init__.py  models.py  schemas.py  service.py
app/domain/disputes/: __init__.py  models.py  schemas.py  service.py
app/domain/escrow/: __init__.py  models.py  schemas.py  service.py
app/domain/identity/: models.py  schemas.py  service.py
app/domain/marketplace/: __init__.py  models.py  schemas.py  service.py
app/domain/payments/: models.py  schemas.py  service.py
app/domain/rooms/: __init__.py  models.py  schemas.py  service.py
app/domain/wallet/: __init__.py  models.py  schemas.py  service.py
app/infra/celery/: app.py
escrow_dex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.local  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/types/: link.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/contracts/: page.tsx
frontend/components/: auth-provider.tsx  dashboard-shell.tsx  protected-page.tsx  top-nav.tsx
frontend/lib/: api.ts  session.ts
frontend/types/: auth.ts
(+46 files in other folders)
